# simetbox-openwrt-base

./: .config  .gitignore  AUTHORS  Dockerfile  README.md  config.h.in  configure.ac  doxygen.cfg  fabfile.py
files/: .simet_geolocation.sh.swp  crontab_writer.lua  get_lat_long.sh  get_mac_address.sh  get_model.sh  get_simet_box_version.sh  get_uci.sh  json_to_uci.lua  personal_data.lua  run_simet.sh  run_simet_uptime  sendcontentprovider.sh  set_uci.sh  simet.conf  simet1.conf  simet_bt.sh  simet_client  simet_cron  simet_dns_ping_traceroute.sh  simet_geolocation.sh  simet_geolocation_legado.sh  simet_ping.sh  simet_send_if_traffic.sh  simet_snmp.sh  simet_traceroute.sh  simet_utils.lua  simetbox_config  simetbox_register.sh
files/uci-defaults/: 01-simet1-cleanup  90-factory-reset  91-offline  99-simet-cron
src/: Makefile.am  base64.c  byteconversion.h  debug.h  dns.c  dns.h  gopt.c  gopt.h  jitter_test.c  jitter_test.h  latency_test.c  latency_test.h  local_simet_config.h  messages.h  netsimet.c  netsimet.h  ntp.c  ntp.h  protocol.c  protocol.h  protocol_event.c  protocol_event.h  protocol_handler.c  protocol_handler.h  results.c  results.h  rtt_test.c  rtt_test.h  server_finder.c  server_finder.h  simet_alexa.c  simet_alexa.h  simet_bcp38.c  simet_bcp38.h  simet_client.c  simet_client.h  simet_config.c  simet_content_provider.c  simet_content_provider.h  simet_dns_ping_traceroute.c  (+23 more)
