AUTOMAKE_OPTIONS = foreign

#CFLAGS =-Wall -Wextra
#LIBS =

bin_PROGRAMS = simet_tools

simet_tools_SOURCES  = base64.c \
		base64.h \
		config.h \
		config_base64.h \
		lockfile.h \
		utils.h \
		utils.c \
		unp.h \
		debug.h \
		byteconversion.h \
		dns.h \
		dns.c \
		simet_dns_ping_traceroute.h \
		simet_dns_ping_traceroute.c \
		simet_porta25.h \
		simet_porta25.c \
		netsimet.c \
		gopt.h \
		jitter_test.h \
		latency_test.h \
		messages.h \
		netsimet.h \
		protocol_event.h \
		protocol.h \
		protocol_handler.h \
		results.h \
		rtt_test.h \
		server_finder.h \
		tcp_test.h \
		udp_test.h \
		json.h \
		protocol.c  \
		protocol_event.c  \
		protocol_handler.c \
		rtt_test.c  \
		results.c \
		tcp_test.c \
		udp_test.c \
		jitter_test.c \
		latency_test.c \
		server_finder.c \
		gopt.c \
		simet_client.c \
		simet_bcp38.h \
		simet_bcp38.c \
		simet_ws.h \
		simet_ws.c \
		simet_alexa.h \
		simet_alexa.c \
		simet_ntpq.h \
		simet_ntpq.c \
		ntp.h \
		ntp.c \
		simet_hash_measure.h \
		simet_hash_measure.c\
		simet_content_provider.h \
		simet_content_provider.c\
		local_simet_config.h \
		simet_config.c \
		simet_tools.h \
		simet_tools.c
